# Strict

./: CMakeLists.txt  License.md  README.md  compile.sh  create_repo.sh  create_zip.sh  dgm_to_nasm.sh  docs.md  example.py  index.html  install.bat  layout.pgsql  pitche_deck.md  pyproject.toml  setup.py  windows_strictc_into_zip.sh
.github/workflows/: build.yml
examples/: generics.strict  hello.strict  match.strict  math.strict  oop.strict
include/: ast.hpp  codegen.hpp  dgm.hpp  lexer.hpp  parser.hpp
src/: ast.cpp  codegen_llvm.cpp  dgm_emitter.cpp  dgm_translator.cpp  lexer.cpp  main.cpp  parser.cpp  runtime.c
src/strict/: __init__.py  cli.py  core.py  downloader.py
tests/: __init__.py  run_tests.sh  test_strict.py
